# arena

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  compose.yaml  docker-compose.yml  justfile  rustfmt.toml
adapters/: Cargo.toml
adapters/src/: cli_environment.rs  lib.rs
adapters/src/arena/: mod.rs
adapters/src/arena/demo/: chat.rs  join.rs  mod.rs  operator.rs  session.rs  signer.rs  url.rs
adapters/src/transport/: http.rs  mod.rs
arena-stub/: Cargo.toml
arena-stub/src/: lib.rs  main.rs  psi_peer.rs
core/: Cargo.toml
core/src/: agent.rs  arena.rs  game.rs  game_loop.rs  lib.rs  llm.rs  runtime.rs  session.rs  test_support.rs  tool.rs  transport.rs
core/src/games/: knock_knock.rs  mod.rs  psi.rs
crates/aria-vault-anthropic-local/: Cargo.toml
crates/aria-vault-anthropic-local/src/: anthropic_api_key.rs  key_source.rs  lib.rs  vault_local.rs
guest/: Cargo.toml
guest/src/: lib.rs
ref/: jokes.txt  negotiation-protocols.txt  strategies.txt
runtime/: Cargo.toml
runtime/src/: main.rs
runtime/src/plugins/: mod.rs  vault_anthropic_local.rs
runtime/tests/: echo_integration.rs
scripts/: play.sh
secure-agent/: Cargo.toml
secure-agent/src/: arena_sync.rs  arena_transport.rs  arena_url.rs  extract_peer_arrays.rs  lib.rs  operator_parse.rs  play_wasi.rs  production_arena.rs  stub_arena.rs  wasi_arena.rs  wasi_environment.rs  wasi_http.rs  wasi_llm.rs  wasm.rs
src/: agent_a.rs  agent_b.rs  ask_peer_tool.rs  lib.rs  main.rs  message.rs  peer_agent.rs  peer_protocol.rs  peer_tools.rs  test_support.rs
src/application/: mod.rs
src/application/factories/: create_agent.rs  mod.rs
src/core/: agent.rs  arena.rs  environment.rs  llm.rs  mod.rs  runtime.rs  session.rs  transport.rs
src/infrastructure/adapters/: mod.rs
src/infrastructure/adapters/agent/: mod.rs  secure_agent.rs
src/infrastructure/adapters/arena/: arena_http_client.rs  mod.rs
src/infrastructure/adapters/environment/: mod.rs  shell_environment.rs
src/infrastructure/adapters/llm/: claude_llm.rs  dummy_llm.rs  knock_knock_audience_llm.rs  knock_knock_user_llm.rs  mod.rs
src/infrastructure/adapters/runtime/: local_file_runtime.rs  mod.rs  omnia_runtime.rs
src/infrastructure/adapters/runtime/plugins/: mod.rs  omnia_wasi_http_post_json.rs  omnia_wasi_vault_anthropic_local.rs  vault_anthropic_local.rs
src/infrastructure/adapters/transport/: json_http.rs  mod.rs
src/tools/: crypto.rs  messaging.rs  mod.rs  negotiation_protocol_picker.rs  strategy_picker.rs
tools/: Cargo.toml
tools/src/: anthropic_api_key_from_local_file.rs  arena_client.rs  http_client.rs  lib.rs  secrets.rs
