[package]
name = "aria-poc-2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
omnia = "0.30.0"
omnia-wasi-vault = "0.30.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
