[workspace]
members = [".", "arena-stub", "core"]
resolver = "2"

[package]
name = "aria-poc-2"
version = "0.1.0"
edition = "2021"

[dependencies]
aria-core = { path = "core" }
anyhow = "1.0.102"
bytes = "1"
futures = "0.3.32"
http = "1"
http-body-util = "0.1"
omnia = "0.30.0"
omnia-wasi-http = "0.30.0"
omnia-wasi-vault = "0.30.0"
serde_json = "1"
tokio = { version = "1.50.0", features = ["rt", "macros", "rt-multi-thread"] }
wasmtime-wasi-http = { version = "42.0.1", features = ["p3"] }

[dev-dependencies]
tempfile = "3"
