[package]
name = "arena-stub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arena-stub"
path = "src/main.rs"

[dependencies]
secure-core = { path = "../core" }
axum = { version = "0.8", features = ["json"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
