[package]
name = "arena-guest"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["macros", "json"] }
bytes = "1.11"
http = "1.4"
http-body-util = "0.1"
http-body = "1.0"
omnia-sdk = "0.28"
omnia-wasi-http = "0.28"
omnia-wasi-otel = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
wasip3 = "0.4"
